Fix var usage, and update README for details

--- a/templates/munin.conf
+++ b/templates/munin.conf
@@ -111,11 +111,11 @@ contact.someuser.command mail -s "Munin notification" {{ munin__email_notificati
 {%   endif %}
 {% endfor %}
 
-[{{ internal_domain }};Totals]
+[{{ munin__main_group }};Totals]
     update no
 
-[{{ internal_domain }};]
-    node_order Totals{% for host in groups['all'] %} {{ host }}{% endfor %}
+[{{ munin__main_group }};]
+    node_order Totals{% for host in groups['all'] %}{% if 'ansible_default_ipv4' in hostvars[host] and hostvars[host]['munin__client_configure']%} {{ host }}{% endif %}{% endfor %}
 
 
 # a simple host tree
