--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,3 +15,4 @@ munin__default_client_packages:
 # Can be apache, nginx or others
 munin__webserver: ""
 munin__fcgi_enabled: False
+munin__use_ssl: False
