Fix: Network address gathering and reserve certbot landing zone
Should manage a good network, and reserve certbot access

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,3 +16,5 @@ munin__default_client_packages:
 munin__webserver: ""
 munin__fcgi_enabled: False
 munin__use_ssl: False
+
+munin__internal_network: 192.168.0.0
