--- a/templates/vhost.conf
+++ b/templates/vhost.conf
@@ -33,6 +33,12 @@ server {
 {%   if munin__ssl_includefile %}
 	include {{ munin__ssl_includefile }};
 {%   endif %}
+
+     	# For SSL check
+        location /.well-known/ {
+		 alias /var/cache/munin/www/.well-known/;
+	}
+
 {% endif %}
 	root /var/cache/munin/www;
 	index index.html;
