--- a/templates/munin.conf
+++ b/templates/munin.conf
@@ -106,7 +106,7 @@ contact.someuser.command mail -s "Munin notification" {{ munin__email_notificati
 {%     if inventory_hostname == h %}
     address 127.0.0.1
 {%     elif 'ansible_virtualization_role' in hostvars[h] and hostvars[h]['ansible_virtualization_role'] == 'host' %}
-    address {{ hostvars[h]['ansible_all_ipv4_addresses'][0] }}
+    address {{ hostvars[h]['ansible_all_ipv4_addresses']|ipaddr(munin__internal_network)|first }}
 {%     else %}
     address {{ hostvars[h]['ansible_default_ipv4']['address'] }}
 {%     endif %}
